src/main/java/com/example/meditag/global/error/GlobalExceptionHandler.java
package com.example.meditag.global.error;

public class GlobalExceptionHandler {
}
